--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<div class="reveal">
 			<div class="slides">
                 <section data-markdown="slides/01_intro.md" data-separator="^---$" data-separator-vertical="^--$"></section>
+                <section data-markdown="slides/02_goodies.md" data-separator="^---$" data-separator-vertical="^--$"></section>
+				<section data-markdown="slides/03_outro.md" data-separator="^---$" data-separator-vertical="^--$"></section>
 			</div>
 		</div>
 
