--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>reveal.js</title>
+		<title>JavaScript Goodies</title>
 		<link rel="stylesheet" href="revealjs/css/reveal.css">
 		<link rel="stylesheet" href="revealjs/css/theme/black.css">
 		<link rel="stylesheet" href="revealjs/lib/css/zenburn.css">
